changement du md de jupyter pour voir si les images sont rendu sur jupy web de github

--- a/notebook_NN.ipynb
+++ b/notebook_NN.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "Et si on faisait 3 neurones avec 4 entrées\n",
     "\n",
-    "<img src=\"./media/video2_4neurones_4entres.png\">"
+    "![mon_image](./media/video2_4neurones_4entres.png)"
    ]
   },
   {
