ben mtn il semblerait que le premier methode marchait bizarre ..

--- a/notebook_NN.ipynb
+++ b/notebook_NN.ipynb
@@ -26,7 +26,7 @@
     "Qu'est ce qu'un neurone ? \n",
     "C'est un objet qui fait la multiplication de ses entrées avec leur poids respectif et la somme de ces resultats avec le biais\n",
     "\n",
-    "<img src=\"https://github.com/L2on1/NN_sentdex_course/blob/main/media/video2_1_neurone.png\">"
+    "<img src=\"./media/video2_1_neurone.png\">"
    ]
   },
   {
