Neural Networks from Scratch - P.4 Batches, Layers, and Objects

--- a/notebook_NN.ipynb
+++ b/notebook_NN.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib as plt\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,12 +43,12 @@
     }
    ],
    "source": [
-    "inputs = [1, 2 ,3]\n",
+    "inputs = [1, 2, 3]\n",
     "weights = [0.2, 0.8, -0.5]\n",
     "biais = 2\n",
     "\n",
-    "output = np.sum([inputs[i]*weights[i] for i in range(0,len(inputs))]) + biais\n",
-    "print(output)"
+    "output = np.sum([inputs[i] * weights[i] for i in range(0, len(inputs))]) + biais\n",
+    "print(output)\n"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +79,12 @@
     }
    ],
    "source": [
-    "inputs = [1, 2 ,3, 2.5]\n",
+    "inputs = [1, 2, 3, 2.5]\n",
     "weights = [0.2, 0.8, -0.5, 1]\n",
     "biais = 2\n",
     "\n",
-    "output = np.sum([inputs[i]*weights[i] for i in range(0,len(inputs))]) + biais\n",
-    "print(output)"
+    "output = np.sum([inputs[i] * weights[i] for i in range(0, len(inputs))]) + biais\n",
+    "print(output)\n"
    ]
   },
   {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +140,250 @@
        "3"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "biais = [[2],[3],[0.5]]\n",
-    "biais[1][0]"
+    "biais = [[2], [3], [0.5]]\n",
+    "biais[1][0]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Video 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "il reecrit avec des loop. Ce que j'avais deja fait ma comme ca j'ai la meme version que dans le cours.\n",
+    "Le tout sans matrice\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.800000000000001, 1.21, 2.385]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = [1, 2 ,3, 2.5]\n",
+    "\n",
+    "weights=[\n",
+    "    [0.2, 0.8, -0.5, 1.0],\n",
+    "    [0.5, -0.91, 0.26, -0.5],\n",
+    "    [-0.26, -0.27, 0.17, 0.87]\n",
+    "    ]\n",
+    "\n",
+    "biais = [2, 3, 0.5]\n",
+    "\n",
+    "layer_output = []\n",
+    "for neuron_weights, neuron_biais in zip(weights, biais):\n",
+    "    neuron_output = neuron_biais\n",
+    "    for n_input, weight in zip(inputs, neuron_weights):\n",
+    "        neuron_output += n_input*weight\n",
+    "    layer_output.append(neuron_output)\n",
+    "    \n",
+    "print(layer_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Maintenat le tout en matrice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.8   1.21  2.385]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = [1, 2 ,3, 2.5]\n",
+    "\n",
+    "weights=[\n",
+    "    [0.2, 0.8, -0.5, 1.0],\n",
+    "    [0.5, -0.91, 0.26, -0.5],\n",
+    "    [-0.26, -0.27, 0.17, 0.87]\n",
+    "    ]\n",
+    "\n",
+    "biais = [2, 3, 0.5]\n",
+    "\n",
+    "\n",
+    "weights_t = np.transpose(np.array(weights))\n",
+    "\n",
+    "outputs = inputs @ weights_t + biais\n",
+    "\n",
+    "print(outputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Video4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On va maintenant prendre plusieur entrées a la fois. On appelle ça le **batch**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.8    1.21   2.385]\n",
+      " [ 8.9   -1.81   0.2  ]\n",
+      " [ 1.41   1.051  0.026]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = [[1, 2 ,3, 2.5],\n",
+    "          [2.0, 5.0,-1.0, 2.0],\n",
+    "          [-1.5, 2.7, 3.3, -0.8]]\n",
+    "\n",
+    "weights=[\n",
+    "    [0.2, 0.8, -0.5, 1.0],\n",
+    "    [0.5, -0.91, 0.26, -0.5],\n",
+    "    [-0.26, -0.27, 0.17, 0.87]\n",
+    "    ]\n",
+    "\n",
+    "biais = [2, 3, 0.5]\n",
+    "\n",
+    "weights_t = np.array(weights).T\n",
+    "\n",
+    "outputs = inputs @ weights_t + biais\n",
+    "\n",
+    "print(outputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On veut mettre une nouvelle layer "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.5031  -1.04185 -2.03875]\n",
+      " [ 0.2434  -2.7332  -5.7633 ]\n",
+      " [-0.99314  1.41254 -0.35655]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights2=[\n",
+    "    [0.1, -0.14, 0.5],\n",
+    "    [-0.5, 0.12, -0.33],\n",
+    "    [-0.44, 0.73, -0.13]\n",
+    "    ]\n",
+    "\n",
+    "biais2 = [-1, 2, -0.5]\n",
+    "\n",
+    "inputs = [[1, 2 ,3, 2.5],\n",
+    "          [2.0, 5.0,-1.0, 2.0],\n",
+    "          [-1.5, 2.7, 3.3, -0.8]]\n",
+    "\n",
+    "weights=[\n",
+    "    [0.2, 0.8, -0.5, 1.0],\n",
+    "    [0.5, -0.91, 0.26, -0.5],\n",
+    "    [-0.26, -0.27, 0.17, 0.87]\n",
+    "    ]\n",
+    "\n",
+    "biais = [2, 3, 0.5]\n",
+    "\n",
+    "weights_t = np.array(weights).T\n",
+    "weights_t2 = np.array(weights2).T\n",
+    "\n",
+    "layer_out1 = inputs @ weights_t + biais\n",
+    "layer_out2 = layer_out1 @ weights_t2 + biais2\n",
+    "\n",
+    "print(layer_out2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On va maintenant faire ça en objets\n",
+    "X : entrée"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.148296   -0.08397602]\n",
+      " [ 0.14100315 -0.01340469]\n",
+      " [ 0.20124979 -0.07290616]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "\n",
+    "X= [[1, 2 ,3, 2.5],\n",
+    "    [2.0, 5.0,-1.0, 2.0],\n",
+    "    [-1.5, 2.7, 3.3, -0.8]]\n",
+    "    \n",
+    "class Layer_Dense:\n",
+    "    def __init__(self,n_inputs, n_neurons):\n",
+    "        self.weights = 0.1 * np.random.randn(n_inputs, n_neurons)\n",
+    "        self.biases = np.zeros((1, n_neurons))\n",
+    "    def forward(self, inputs):\n",
+    "        self.output = inputs @ self.weights + self.biases\n",
+    "        \n",
+    "layer1 = Layer_Dense(4,5)\n",
+    "layer2 = Layer_Dense(5,2)\n",
+    "\n",
+    "layer1.forward(X)\n",
+    "#print(layer1.output)\n",
+    "\n",
+    "layer2.forward(layer1.output)\n",
+    "print(layer2.output)\n"
    ]
   }
  ],
