--- a/notebook_NN.ipynb
+++ b/notebook_NN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -124,14 +124,14 @@
     "\n",
     "output=np.zeros((3,1))\n",
     "\n",
-    "for i in range(0,np.shape(weights)[0]) :\n",
+    "for i in range(0,np.shape(np.array(weights))[0]) :\n",
     "    output[i][0] = np.sum([inputs[j]*weights[i][j] for j in range(0,len(inputs))]) + biais[i][0]\n",
     "print(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -349,16 +349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.148296   -0.08397602]\n",
-      " [ 0.14100315 -0.01340469]\n",
-      " [ 0.20124979 -0.07290616]]\n"
+      "[[ 0.14829601 -0.08397602]\n",
+      " [ 0.14100316 -0.01340469]\n",
+      " [ 0.20124978 -0.07290616]]\n"
      ]
     }
    ],
@@ -385,6 +385,130 @@
     "layer2.forward(layer1.output)\n",
     "print(layer2.output)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vdeo 5 : Hidden Layer Activation Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test d'une foncton ReLU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 0, 3.3, 0, 1.1, 2.2, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = [0, 2, -1, 3.3, -2.7, 1.1, 2.2, -100]\n",
+    "outputs=[]\n",
+    "for i in inputs: \n",
+    "    outputs.append(max(0,i))\n",
+    "print(outputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "maintenat on va mettra tout ça la dedans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00]\n",
+      " [-8.35815910e-04 -7.90404272e-04 -1.33452215e-03  4.65504476e-04\n",
+      "   4.56846319e-05]\n",
+      " [-2.39994470e-03  5.93471341e-05 -2.24808278e-03  2.03573145e-04\n",
+      "   6.10024319e-04]\n",
+      " ...\n",
+      " [ 1.13291517e-01 -1.89262286e-01 -2.06855088e-02  8.11079666e-02\n",
+      "  -6.71350881e-02]\n",
+      " [ 1.34588361e-01 -1.43197834e-01  3.09493989e-02  5.66337556e-02\n",
+      "  -6.29687458e-02]\n",
+      " [ 1.07817926e-01 -2.00809643e-01 -3.37579325e-02  8.72561932e-02\n",
+      "  -6.81458786e-02]]\n",
+      "[[0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "  0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 4.65504476e-04\n",
+      "  4.56846319e-05]\n",
+      " [0.00000000e+00 5.93471341e-05 0.00000000e+00 2.03573145e-04\n",
+      "  6.10024319e-04]\n",
+      " ...\n",
+      " [1.13291517e-01 0.00000000e+00 0.00000000e+00 8.11079666e-02\n",
+      "  0.00000000e+00]\n",
+      " [1.34588361e-01 0.00000000e+00 3.09493989e-02 5.66337556e-02\n",
+      "  0.00000000e+00]\n",
+      " [1.07817926e-01 0.00000000e+00 0.00000000e+00 8.72561932e-02\n",
+      "  0.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nnfs\n",
+    "from nnfs.datasets import spiral_data\n",
+    "nnfs.init()\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "X= [[1, 2 ,3, 2.5],\n",
+    "    [2.0, 5.0,-1.0, 2.0],\n",
+    "    [-1.5, 2.7, 3.3, -0.8]]\n",
+    "\n",
+    "X, y = spiral_data(100,3)\n",
+    "    \n",
+    "class Layer_Dense:\n",
+    "    def __init__(self, n_inputs, n_neurons):\n",
+    "        self.weights = 0.1 * np.random.randn(n_inputs, n_neurons)\n",
+    "        self.biases = np.zeros((1, n_neurons))\n",
+    "    def forward(self, inputs):\n",
+    "        self.output = inputs @ self.weights + self.biases\n",
+    "        \n",
+    "class Activayion_ReLU:\n",
+    "    def forward(self, inputs):\n",
+    "        self.output = np.maximum(0,inputs)\n",
+    "        \n",
+    "layer1 = Layer_Dense(2,5)\n",
+    "#layer2 = Layer_Dense(5,2)\n",
+    "\n",
+    "activation1 = Activayion_ReLU()\n",
+    "\n",
+    "layer1.forward(X)\n",
+    "print(layer1.output)\n",
+    "\n",
+    "activation1.forward(layer1.output)\n",
+    "print(activation1.output)\n",
+    "\n",
+    "#layer2.forward(layer1.output)\n",
+    "#print(layer2.output)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
